# ICGproject-watercolorization

./: .gitignore  Abstraction.cpp  Abstraction.hpp  BoundaryClassification.cpp  BoundaryClassification.hpp  CMakeLists.txt  ColorAdjustment.cpp  ColorAdjustment.hpp  EdgeDarkening.cpp  EdgeDarkening.hpp  Effects.cpp  Effects.hpp  Granulation.cpp  Granulation.hpp  HandTremor.cpp  HandTremor.hpp  PerlinNoise.cpp  PerlinNoise.hpp  README.md  SaliencyDistanceField.cpp  SaliencyDistanceField.hpp  TurbulenceFlow.cpp  TurbulenceFlow.hpp  Watercolorization.cpp  WetInWet.cpp  WetInWet.hpp
ClusterTool/: CMakeLists.txt  Clustering.cpp
PictureDatabase/: model
